[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/rooms/eastergame/darktower.png" type="Texture" id=1]
[ext_resource path="res://player/CatEaster.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/rooms/easterGame/DetectionBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/rooms/easterGame/EnemYSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/rooms/easterGame/AvoidTheBar.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 direction = vec2(1.0,0.0);
uniform float speed_scale = 0.05;

void fragment(){

     vec2 move = direction * TIME * speed_scale;

     COLOR = texture(TEXTURE, UV + move);   
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = Vector2( 1, 0 )
shader_param/speed_scale = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 120, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 10 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[node name="AvoidTheBar" type="Node2D"]
script = ExtResource( 5 )

[node name="EnemYSpawner" parent="." instance=ExtResource( 4 )]

[node name="BG" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 120, 68 )
texture = ExtResource( 1 )

[node name="CatEaster" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.631373, 0, 0, 1 )
position = Vector2( 18, 10 )
mode = 2
mass = 1.77347
gravity_scale = 8.0
contact_monitor = true
impulse = 400

[node name="DetectionBar" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="DetectionBar" index="0"]
position = Vector2( 120, 145 )
shape = SubResource( 3 )

[node name="DetectionBar2" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="DetectionBar2" index="0"]
position = Vector2( 120, -10 )
shape = SubResource( 4 )

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Score" type="Label" parent="."]
margin_left = 221.0
margin_top = 121.0
margin_right = 302.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0.513726, 0.356863, 0.356863, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]

[editable path="DetectionBar"]

[editable path="DetectionBar2"]
